# Web-Boilerplate

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  benchmark.yml  mongo-init.js
.github/workflows/: docker.yml  rust.yml
benchmarks/: auth.yml  index.yml
src/: catchers.rs  lib.rs  logger.rs
src/api/: auth.rs  index.rs
src/models/: auth.rs  mod.rs  private_ecdsa_key.pem  public_ecdsa_key.pem  user.rs
tests/: auth.rs  catchers.rs  index.rs
