[package]
name = "web-boilerplate"
version = "0.1.0"
edition = "2021"
rust-version = "1.60"
authors = ["LJason <ljason@ljason.cn>"]
readme = "README.md"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"

[lib]
name = "web_boilerplate"
path = "src/lib.rs"

[dependencies]
bson = "2"
dotenv = "0.15"
jsonwebtoken = "8"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["serde"]

[dependencies.mongodb]
version = "2"
default-features = false
features = ["async-std-runtime", "zlib-compression"]

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
version = "0.5.0-rc.2"
default-features = false
features = ["http2", "json"]

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
